--- a/src/components/Home/BlogList/BlogItem/style.css
+++ b/src/components/Home/BlogList/BlogItem/style.css
@@ -65,3 +65,10 @@
     font-weight: 600;
   }
   
+  /* media query */
+@media(max-width:900px) {
+  .blogItem-cover {
+    width: 100%;
+    height: 100%;
+  }
+}
